Prevent sideways scrolling on mobile devices (#179)
* Prevent sideways scrolling on mobile devices

* Fix sidewaysa scrolling for guides as well

--- a/css/mobile_guides.css
+++ b/css/mobile_guides.css
@@ -1,4 +1,4 @@
-html {
+html, body {
   overflow-x: hidden;
 }
 h1 {
